--- a/Frontend/src/styles/upload.css
+++ b/Frontend/src/styles/upload.css
@@ -7,13 +7,14 @@
 
 .upload-container h1 {
   font-size: 32px;
-  margin-bottom: 10px;
+  margin-top: 55px;
+  margin-bottom: 25px;
   color: #00f5ff;
 }
 
 .subtitle {
   color: #94a3b8;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .upload-box {
@@ -41,7 +42,7 @@
 
 .upload-icon {
   width: 42px;   
-  margin-bottom: 16px;
+  margin-bottom: 20px;
   opacity: 0.9;
 }
 
